--- a/blogs/Redis/2022/081902.md
+++ b/blogs/Redis/2022/081902.md
@@ -7,5 +7,114 @@ categories:
 date: 2022-08-19
 ---
 
-## ***Windows***
+## ***准备工作***
 
+### ***软件***
+
+查看Redis可用版本, [https://download.redis.io/releases/](https://download.redis.io/releases/)
+
+## ***开始安装***
+
+### ***1、下载***
+
+下载需要的Redis版本到服务器上
+
+```shell
+https://download.redis.io/releases/redis-7.0.5.tar.gz
+```
+
+### ***2、解压***
+
+```shell
+tar xzf redis-7.0.5.tar.gz
+```
+
+### ***3、移动目录***
+
+一般都会将redis放置到 `/usr/local/redis` 目录
+
+```shell
+mv redis-7.0.5 /usr/local/redis
+```
+
+## ***编译安装***
+
+
+### ***1、编译***
+
+```shell
+cd /usr/local/redis
+
+make
+```
+
+> - 如果执行make命令报错：cc 未找到命令，原因是系统中缺少gcc 执行下面命令安装gcc: 
+> ```shell
+> yum -y install gcc automake autoconf libtool make
+> ```
+> - 如果执行make命令报错：致命错误:jemalloc/jemalloc.h: 没有那个文件或目录，则需要在make指定分配器为libc。
+> ```shell
+> make MALLOC=libc
+> ```
+
+make命令执行完，redis就编译完成了。
+
+### ***2、安装***
+
+执行下面命令安装redis，并指定安装目录
+
+```shell
+make install PREFIX=/usr/local/redis
+```
+
+![Snipaste_2022-10-28_08-31-28.png](https://s2.loli.net/2022/11/05/JbaeuSj1opnAxsh.png)
+
+## ***启动Redis***
+
+进入redis安装目录，执行下面命令启动redis服务
+
+```shell
+./bin/redis-server redis.conf
+```
+
+![Snipaste_2022-10-28_08-33-13.png](https://s2.loli.net/2022/11/05/27YvmnkxUSEQaVW.png)
+
+但这种启动方式不能退出控制台，如果退出，那么redis服务也会停止。如果想要redis以后台方式运行，需要修改redis的配置文件
+
+```shell
+vim redis.conf
+```
+
+将该配置文件中的daemonize no改为daemonize yes即可
+
+修改完成后，重新执行启动命令启动redis，然后通过下面命令查看redis进程，可以发现redis服务已经被启动了：
+
+```shell
+ps -ef | grep redis
+```
+
+![Snipaste_2022-10-28_08-35-18.png](https://s2.loli.net/2022/11/05/PFnKdNo1whiSbvk.png)
+
+## ***测试***
+
+通过redis-cli测试redis是否可用，在redis安装目录执行下面命令：
+
+```shell
+./bin/redis-cli
+```
+
+此处我们通过下面命令随便set一个字符串类型的值，key是test，value是hello：
+
+```shell
+set test hello
+```
+
+然后通过下面命令get出test这个key的value值：
+
+```shell
+get test
+```
+
+![Snipaste_2022-10-28_08-38-47.png](https://s2.loli.net/2022/11/05/K9oCRu8vF5arkwB.png)
+
+测试没有问题
